--- a/app/build.gradle
+++ b/app/build.gradle
@@ -20,4 +20,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
+    compile files('libs/gson-2.2.4.jar')
 }
