--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,4 +21,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar', '*.aar'])
     compile files('libs/gson-2.2.4.jar')
+    compile files('libs/achartengine-1.1.0.jar')
 }
