--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.ericturnerdev.CryptsyTicker" >
+          package="com.ericturnerdev.CryptsyTicker">
 
-    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -11,19 +11,26 @@
         >
         <activity
             android:name="com.ericturnerdev.CryptsyTicker.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
-        <!--
-        <activity android:name="com.ericturnerdev.CryptsyTicker.SettingsActivity"
-                  android:label="Settings"
-                  android:parentActivityName="com.ericturnerdev.CryptsyTicker.MainActivity"
-                  />
-                  -->
+
+        <activity
+            android:name="com.ericturnerdev.CryptsyTicker.SettingsActivity"
+            android:label="Settings"
+            android:parentActivityName="com.ericturnerdev.CryptsyTicker.MainActivity"
+            />
+
+        <activity
+            android:name="com.ericturnerdev.CryptsyTicker.IndivActivity"
+            android:label="IndivActivity"
+            android:parentActivityName="com.ericturnerdev.CryptsyTicker.MainActivity"
+            />
+
     </application>
 
 </manifest>
