--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.ericturnerdev.CryptsyTicker">
+          package="com.ericturnerdev.Altcoin">
 
     <uses-permission android:name="android.permission.INTERNET"/>
     <application
@@ -10,7 +10,7 @@
         android:theme="@style/AppTheme"
         >
         <activity
-            android:name="com.ericturnerdev.CryptsyTicker.MainActivity"
+            android:name="com.ericturnerdev.Altcoin.MainActivity"
             android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
@@ -20,15 +20,15 @@
         </activity>
 
         <activity
-            android:name="com.ericturnerdev.CryptsyTicker.SettingsActivity"
+            android:name="com.ericturnerdev.Altcoin.SettingsActivity"
             android:label="Settings"
-            android:parentActivityName="com.ericturnerdev.CryptsyTicker.MainActivity"
+            android:parentActivityName="com.ericturnerdev.Altcoin.MainActivity"
             />
 
         <activity
-            android:name="com.ericturnerdev.CryptsyTicker.IndivActivity"
+            android:name="com.ericturnerdev.Altcoin.IndivActivity"
             android:label="IndivActivity"
-            android:parentActivityName="com.ericturnerdev.CryptsyTicker.MainActivity"
+            android:parentActivityName="com.ericturnerdev.Altcoin.MainActivity"
             />
 
     </application>
