--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+          xmlns:tools="http://schemas.android.com/tools"
           package="com.ericturnerdev.Altcoin">
 
     <uses-permission android:name="android.permission.INTERNET"/>
@@ -8,7 +9,8 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        >
+        android:debuggable="false"
+        tools:ignore="HardcodedDebugMode">
         <activity
             android:name="MainActivity"
             android:label="@string/app_name">
