--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme"
-        android:debuggable="false"
+        android:debuggable="true"
         tools:ignore="HardcodedDebugMode">
         <activity
             android:name="MainActivity"
